Test fix align

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     color: #4d97f1;
 }
 
-h1, h2, h3, p{
-    text-align: center;
+.s_head {
+    size: 24px;
+    font-style: bold;
 }
